# lmkit

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
cmd/lmkit/: args_test.go  logs.go  logs_test.go  main.go  mutate.go  mutate_test.go  status_test.go
docs/specs/: 2026-06-19-lmkit-fleet-ops-cli-design.md
examples/llama/: README.md  config.py  model.py  test_smoke.py
internal/fleet/: fleet.go  fleet_test.go  gpu.go
internal/metrics/: discover.go  discover_test.go  metrics.go  metrics_test.go  status.go  status_test.go
internal/remote/: remote.go  remote_test.go  ssh.go
internal/txn/: txn.go  txn_test.go
internal/unit/: unit.go  unit_test.go
lmkit/: __init__.py  cli.py  observability.py  pretrain.py  protocol.py  push.py  quickstart.py  sft.py  sft_data.py  shard.py  tokenizer.py  training.py
lmkit/eval/: __init__.py  gen.py  judge.py
tests/: test_data_pipeline.py  test_eval.py  test_observability.py  test_readme_drift.py  test_sft.py  test_sft_data.py
